all html and public done

--- a/public/electronic/pages/electronics.html
+++ b/public/electronic/pages/electronics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CST Department</title>
+    <title>Electronics Department</title>
     <link rel="stylesheet" href="../../cst/css/cst_style.css">
     <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
@@ -19,6 +19,8 @@
             href="../../constraction/pages/constraction.html">Construction</a> <a
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+            <a
+            href="../../developer/developer.html">Developer</a>
     </nav>
     <div class="full_container"> <img class="bg-image" src="../img/Electrical Basic Lab.jpg" alt="Snow"
             style="width:100%;">
@@ -27,47 +29,96 @@
         </div>
     </div>
     <div class="about-section">
-        <div class="container"> <big><b>About CST:</b></big>
-            <p>Computer science and technology have revolutionized our world, shaping the way we live, work, and
-                communicate. From the ubiquitous smartphones in our hands to the cloud-powered systems that run our
-                businesses, computers have become an indispensable part of our daily lives. </p>
-            <p> Computer science is the study of computers and computational systems, encompassing the design,
-                development, and analysis of software and hardware. It encompasses a wide range of disciplines,
-                including algorithms, data structures, artificial intelligence, and computer graphics. </p>
-            <p> Technology, on the other hand, refers to the practical application of scientific knowledge to create
-                tangible tools, devices, and systems. It encompasses a vast array of fields, from telecommunications and
-                electronics to medicine and biotechnology. </p>
-            <p>The interplay between computer science and technology has fueled innovation and transformed industries
-                across the globe. The advent of personal computers, the rise of the Internet, and the development of
-                mobile devices have all been driven by advancements in computer science and technology. </p>
-            <p>These advancements have had a profound impact on society, enabling global communication, providing access
-                to information, and driving economic growth. They have also transformed industries, from healthcare and
-                education to finance and manufacturing.</p>
-            <p>As computer science and technology continue to evolve, we can expect to see even more transformative
-                advancements in the years to come. These advancements will shape the future of our world, impacting our
-                lives in ways we can only begin to imagine. </p> <!-- Other paragraphs go here -->
+        <div class="container"> <big><b>About Electronics Technology:</b></big>
+
+            <h1>ইলেকট্রনিক্স টেকনোলজির বিভিন্ন শাখাতে</h1>
+
+            <p>আমরা জেনেছি ইলেকট্রনিক্স বিজ্ঞানের একটি গুরুত্বপূর্ণ আবিস্কার। বর্তমানে প্রচলিত সকল যন্ত্রের মুল চালিকা
+                শক্তি হলো ইলেকট্রনিক্স। ইলেকট্রনিক্স প্রকৌশল বা কখনো কখনো ইলেক্ট্রনিক প্রকৌশল প্রকৌশলবিদ্যার একটি শাখা
+                যেটি ইলেকট্রনের প্রভাব ও আচরণ সম্পর্কিত বৈজ্ঞানিক জ্ঞানের সাহায্যে বিভিন্ন উপাদান, যন্ত্রপাতি, (যেমন
+                ইলেক্ট্রন টিউব, ট্রানজিস্টর, সমন্বিত বর্তনী) ইত্যাদির নির্মাণ, পরিমার্জন, পরিবর্ধন করে। ইলেকট্রন যখন
+                শূন্যস্থান বা বলা ভালো বায়ুশুণ্যস্থান বা অর্ধপরিবাহী সেমিকন্ডাক্টর গ্যাসের মধ্যে দিয়ে চলাচল করে তখন
+                সেই ব্যাপার গুলিকে যুক্তিবিদ্যা বা ইঞ্জিনিয়ারিং এর যে শাখাতে আলোচনা করা হয় তারই নাম হলো বিদ্যুতিন বা
+                ইলেকট্রনিক্স।</p>
+
+            <p>আমরা প্রতিনিয়ত বিভিন্ন ইলেকট্রনিক্স সার্কিটে যে সকল আইসি বা ইন্টিগ্রেটেড সার্কিট (IC), ডায়োড (Diode),
+                ট্রানজিস্টর (Transistor), ট্রায়োড (Triode), ক্যাপাসিটর (Capacitor), রেজিস্টার (Register), ট্রান্সফরমার
+                (Transformer) ইত্যাদি জিনিস সাধারণ ভাবে ব্যবহার করে থাকি তাদেরকে ইলেকট্রনিক্স ডিভাইস বলা হয়।</p>
+
+            <p>আধুনিক সভ্যসমাজে বিজ্ঞানের প্রত্যেকটি আবিস্কারের পেছনে রয়েছে ইলেকট্রনিক্সের অবদান। এছাড়া স্বাস্থ্য
+                সংক্রান- বিষয়ে সকল প্রকার রোগ নির্ণয়ের ক্ষেত্রে ইলেকট্রনিক্সের বিকল্প কিছু হতে পারে না।</p>
+
+            <p>কাজেই এই দ্রুত উন্নয়শীল সমাজে Electronics Engineering একটি গুরুত্বপূর্ণ শাখা হিসেবে অবস্থান করছে।
+                মানুষের দৈনন্দিন জীবন প্রণালী ও বেঁচে থাকার মাধ্যম হিসাবে Electronics প্রতি নিয়তই নিজেকে হাজির করছে নতুন
+                ভাবে। উন্নত জীবন যাপনের জন্য মানুষ প্রতিটি মুহুর্তেই Electronics এর উপর নির্ভর করে চলছে। এক কথায় এই
+                বিশাল পৃথিবীকে হাতের মুঠোয় আনা সম্ভব হয়েছে একমাত্র Electronics এর জন্য। খুব কম পরিসরে একমাত্র
+                ইলেকট্রনিক্সই পারে নিজের কর্মসংস্থান নিজেই সৃষ্টি করতে। যেমন: IPS, UPS, VOLT STABILIZER, TV REMOTE, VCD,
+                DVD, POWER SUPPLY ইত্যাদি ফ্যাক্টরী তৈরী করতে পারে।</p>
+            <p>সাইন্স টেকনোলজির বিভিন্ন শাখাতে আমরা জেনেছি ইলেকট্রনিক্স বিজ্ঞানের একটি গুরুত্বপূর্ণ আবিস্কার। বর্তমানে
+                প্রচলিত সকল যন্ত্রের মুল চালিকা শক্তি হলো ইলেকট্রনিক্সইলেক্ট্রনিক্স প্রকৌশল বা কখনো কখনো ইলেক্ট্রনিক
+                প্রকৌশল প্রকৌশলবিদ্যার একটি শাখা যেটি ইলেক্ট্রনের প্রভাব ও আচরণ সম্পর্কিত বৈজ্ঞানিক জ্ঞানের সাহায্যে
+                বিভিন্ন উপাদান, যন্ত্রপাতি, (যেমন ইলেক্ট্রন টিউব, ট্রানজিস্টর, সমন্বিত বর্তনী) ইত্যাদির নির্মাণ,
+                পরিমার্জন, পরিবর্ধন করে।ইলেকট্রন যখন শূন্যস্থান বা বলা ভালো বায়ুশুণ্যস্থান বা অর্ধপরিবাহী সেমিকন্ডাক্টর
+                গ্যাসের মধ্যে দিয়ে চলাচল করে তখন সেই ব্যাপার গুলিকে যুক্তিবিদ্যা বা ইঞ্জিনিয়ারিং এর যে শাখাতে আলোচনা
+                করা হয় তারই নাম হলো বিদ্যুতিন বা ইলেকট্রনিক্স।আমরা প্রতিনিয়ত বিভিন্ন ইলেকট্রনিক্স সার্কিটে যে সকল আইসি
+                বা ইন্টিগ্রেটেড সার্কিট (IC), ডায়োড (Diode), ট্রানজিস্টর (Transistor), ট্রায়োড (Triode), ক্যাপাসিটর
+                (Capacitor), রেজিস্টার (Register), ট্রান্সফরমার (Transformer) ইত্যাদি জিনিস সাধারণ ভাবে ব্যবহার করে থাকি
+                তাদেরকে ইলেকট্রনিক্স ডিভাইস বলা হয়আধুনিক সভ্যসমাজে বিজ্ঞানের প্রত্যেকটি আবিস্কারের পেছনে রয়েছে
+                ইলেকট্রনিক্সের অবদান। এছাড়া স্বাস্থ্য সংক্রান- বিষয়ে সকল প্রকার রোগ নির্ণয়ের ক্ষেত্রে ইলেকট্রনিক্সের
+                বিকল্প কিছু হতে পারে না। কাজেই এই দ্রুত উন্নয়শীল সমাজে Electronics Engineering একটি গুরুত্বপূর্ণ শাখা
+                হিসেবে অবস্থান করছে। মানুষের দৈনন্দিন জীবন প্রণালী ও বেঁচে থাকার মাধ্যম হিসাবে Electronics প্রতি নিয়তই
+                নিজেকে হাজির করছে নতুন ভাবে। উন্নত জীবন যাপনের জন্য মানুষ প্রতিটি মুহুর্তেই Electronics এর উপর নির্ভর
+                করে চলছে। এক কথায় এই বিশাল পৃথিবীকে হাতের মুঠোয় আনা সম্ভব হয়েছে একমাত্র Electronics এর জন্য। খুব কম
+                পরিসরে একমাত্র ইলেকট্রনিক্সই পারে নিজের কর্মসংস্থান নিজেই সৃষ্টি করতে। যেমন: IPS, UPS, VOLT STABILIZER,
+                TV REMOTE, VCD, DVD, POWER SUPPLY ইত্যাদি ফ্যাক্টরী তৈরী করতে পারে।
+                ইলেকট্রনিক্স টেকনোলজিতে পড়তে প্রয়োজনীয় ল্যাব সমূহ</p>
+
         </div>
     </div>
     <div class="department-section">
         <div class="container"> <big><b>Department Phase:</b></big>
-            <p>There are 2 shifts . One is Morning shift another is Day shift. Each shift contains 1<sup>st</sup> to
-                8<sup>th</sup> semesters. But 8<sup>th</sup> semester is not academic , it's industrial training. But
-                the semester system is like pair system. When even semster is running all the department covers with
-                even and when even pass, then it's opposite. In every semesters there have like hundres of
-                students.Which are divided by 2 groups for better management</p> <!-- Other paragraphs go here -->
+            <p>
+                সাইন্স টেকনোলজির বিভিন্ন শাখাতে আমরা জেনেছি ইলেকট্রনিক্স বিজ্ঞানের একটি গুরুত্বপূর্ণ আবিস্কার। বর্তমানে
+                প্রচলিত সকল যন্ত্রের মুল চালিকা শক্তি হলো ইলেকট্রনিক্সইলেক্ট্রনিক্স প্রকৌশল বা কখনো কখনো ইলেক্ট্রনিক
+                প্রকৌশল প্রকৌশলবিদ্যার একটি শাখা যেটি ইলেক্ট্রনের প্রভাব ও আচরণ সম্পর্কিত বৈজ্ঞানিক জ্ঞানের সাহায্যে
+                বিভিন্ন উপাদান, যন্ত্রপাতি, (যেমন ইলেক্ট্রন টিউব, ট্রানজিস্টর, সমন্বিত বর্তনী) ইত্যাদির নির্মাণ,
+                পরিমার্জন, পরিবর্ধন করে।ইলেকট্রন যখন শূন্যস্থান বা বলা ভালো বায়ুশুণ্যস্থান বা অর্ধপরিবাহী সেমিকন্ডাক্টর
+                গ্যাসের মধ্যে দিয়ে চলাচল করে তখন সেই ব্যাপার গুলিকে যুক্তিবিদ্যা বা ইঞ্জিনিয়ারিং এর যে শাখাতে আলোচনা
+                করা হয় তারই নাম হলো বিদ্যুতিন বা ইলেকট্রনিক্স।আমরা প্রতিনিয়ত বিভিন্ন ইলেকট্রনিক্স সার্কিটে যে সকল আইসি
+                বা ইন্টিগ্রেটেড সার্কিট (IC), ডায়োড (Diode), ট্রানজিস্টর (Transistor), ট্রায়োড (Triode), ক্যাপাসিটর
+                (Capacitor), রেজিস্টার (Register), ট্রান্সফরমার (Transformer) ইত্যাদি জিনিস সাধারণ ভাবে ব্যবহার করে থাকি
+                তাদেরকে ইলেকট্রনিক্স ডিভাইস বলা হয়আধুনিক সভ্যসমাজে বিজ্ঞানের প্রত্যেকটি আবিস্কারের পেছনে রয়েছে
+                ইলেকট্রনিক্সের অবদান। এছাড়া স্বাস্থ্য সংক্রান- বিষয়ে সকল প্রকার রোগ নির্ণয়ের ক্ষেত্রে ইলেকট্রনিক্সের
+                বিকল্প কিছু হতে পারে না। কাজেই এই দ্রুত উন্নয়শীল সমাজে Electronics Engineering একটি গুরুত্বপূর্ণ শাখা
+                হিসেবে অবস্থান করছে। মানুষের দৈনন্দিন জীবন প্রণালী ও বেঁচে থাকার মাধ্যম হিসাবে Electronics প্রতি নিয়তই
+                নিজেকে হাজির করছে নতুন ভাবে। উন্নত জীবন যাপনের জন্য মানুষ প্রতিটি মুহুর্তেই Electronics এর উপর নির্ভর
+                করে চলছে। এক কথায় এই বিশাল পৃথিবীকে হাতের মুঠোয় আনা সম্ভব হয়েছে একমাত্র Electronics এর জন্য। খুব কম
+                পরিসরে একমাত্র ইলেকট্রনিক্সই পারে নিজের কর্মসংস্থান নিজেই সৃষ্টি করতে। যেমন: IPS, UPS, VOLT STABILIZER,
+                TV REMOTE, VCD, DVD, POWER SUPPLY ইত্যাদি ফ্যাক্টরী তৈরী করতে পারে।
+                ইলেকট্রনিক্স টেকনোলজিতে পড়তে প্রয়োজনীয় ল্যাব সমূহ
+            </p>
         </div>
     </div>
     <div class="facilities-section">
         <div class="container"> <big><b>Department's Facilities:</b></big>
-            <p>One of the finest department in our Institute is Computer Science and Technology. All necessary
-                instruments like Computer,Projector,Monitor, others peripherals for students are available here. All lab
-                class are eco friendly and suited for students in a good way. There have sufficient computers for
-                students to practice . Teachers are also so welcoming to students . They guide students very sinciarly .
-                There have good connection of internet for serve students . Lab teachers are also helpful and they are
-                active all the time to keeps the lab to a better condition. Security Systems are also good , all lab
-                class , theory class , even corridor are bind with CCTV camera. In total <b>CST</b> department in
-                Tangail Polytechnic is one of the best department the institute offers.</p>
-            <!-- Other paragraphs go here -->
+            <p>সাইন্স টেকনোলজির বিভিন্ন শাখাতে আমরা জেনেছি ইলেকট্রনিক্স বিজ্ঞানের একটি গুরুত্বপূর্ণ আবিস্কার। বর্তমানে
+                প্রচলিত সকল যন্ত্রের মুল চালিকা শক্তি হলো ইলেকট্রনিক্সইলেক্ট্রনিক্স প্রকৌশল বা কখনো কখনো ইলেক্ট্রনিক
+                প্রকৌশল প্রকৌশলবিদ্যার একটি শাখা যেটি ইলেক্ট্রনের প্রভাব ও আচরণ সম্পর্কিত বৈজ্ঞানিক জ্ঞানের সাহায্যে
+                বিভিন্ন উপাদান, যন্ত্রপাতি, (যেমন ইলেক্ট্রন টিউব, ট্রানজিস্টর, সমন্বিত বর্তনী) ইত্যাদির নির্মাণ,
+                পরিমার্জন, পরিবর্ধন করে।ইলেকট্রন যখন শূন্যস্থান বা বলা ভালো বায়ুশুণ্যস্থান বা অর্ধপরিবাহী সেমিকন্ডাক্টর
+                গ্যাসের মধ্যে দিয়ে চলাচল করে তখন সেই ব্যাপার গুলিকে যুক্তিবিদ্যা বা ইঞ্জিনিয়ারিং এর যে শাখাতে আলোচনা
+                করা হয় তারই নাম হলো বিদ্যুতিন বা ইলেকট্রনিক্স।আমরা প্রতিনিয়ত বিভিন্ন ইলেকট্রনিক্স সার্কিটে যে সকল আইসি
+                বা ইন্টিগ্রেটেড সার্কিট (IC), ডায়োড (Diode), ট্রানজিস্টর (Transistor), ট্রায়োড (Triode), ক্যাপাসিটর
+                (Capacitor), রেজিস্টার (Register), ট্রান্সফরমার (Transformer) ইত্যাদি জিনিস সাধারণ ভাবে ব্যবহার করে থাকি
+                তাদেরকে ইলেকট্রনিক্স ডিভাইস বলা হয়আধুনিক সভ্যসমাজে বিজ্ঞানের প্রত্যেকটি আবিস্কারের পেছনে রয়েছে
+                ইলেকট্রনিক্সের অবদান। এছাড়া স্বাস্থ্য সংক্রান- বিষয়ে সকল প্রকার রোগ নির্ণয়ের ক্ষেত্রে ইলেকট্রনিক্সের
+                বিকল্প কিছু হতে পারে না। কাজেই এই দ্রুত উন্নয়শীল সমাজে Electronics Engineering একটি গুরুত্বপূর্ণ শাখা
+                হিসেবে অবস্থান করছে। মানুষের দৈনন্দিন জীবন প্রণালী ও বেঁচে থাকার মাধ্যম হিসাবে Electronics প্রতি নিয়তই
+                নিজেকে হাজির করছে নতুন ভাবে। উন্নত জীবন যাপনের জন্য মানুষ প্রতিটি মুহুর্তেই Electronics এর উপর নির্ভর
+                করে চলছে। এক কথায় এই বিশাল পৃথিবীকে হাতের মুঠোয় আনা সম্ভব হয়েছে একমাত্র Electronics এর জন্য। খুব কম
+                পরিসরে একমাত্র ইলেকট্রনিক্সই পারে নিজের কর্মসংস্থান নিজেই সৃষ্টি করতে। যেমন: IPS, UPS, VOLT STABILIZER,
+                TV REMOTE, VCD, DVD, POWER SUPPLY ইত্যাদি ফ্যাক্টরী তৈরী করতে পারে।
+                ইলেকট্রনিক্স টেকনোলজিতে পড়তে প্রয়োজনীয় ল্যাব সমূহ</p>
         </div>
     </div>
     <hr> <br>
@@ -82,7 +133,8 @@
             src="../img/et7.jpg" alt="Computer Lab"> <img src="../img/et8.jpg" alt="Computer Lab"> <img
             src="../img/et8_0.jpg" alt="Computer Lab"> <img src="../img/et9.jpg" alt="Computer Lab"> <img
             src="../img/IMG20181025143446.jpg" alt="Computer Lab"> <img src="../img/IMG20181025143657.jpg"
-            alt="Computer Lab"> <img src="../img/IMG20181025143736_1.jpg" alt="Computer Lab"> </div>
+            alt="Computer Lab"> <img src="../img/IMG20181025143736_1.jpg" alt="Computer Lab">
+    </div>
     <hr>
     <div style="text-align: center;">
         <h1>Teacher's of this Technology</h1>
