--- a/public/home/home.html
+++ b/public/home/home.html
@@ -17,8 +17,8 @@
             href="../mechanical/pages/mechanical.html">Mechanical</a> <a
             href="../constraction/pages/constraction.html">Construction</a> <a
             href="../telecom/pages/telecom.html">Telecommunication</a> <a
-            href="../tpi/pages/teachersInfo.html">Teachers</a> <a href="../tpi/pages/students.html">Students</a> <a
-            href="../../tpi/pages/students.html">Students</a> </nav>
+            href="../tpi/pages/teachersInfo.html">Teachers</a> <a href="../tpi/pages/students.html">Students</a>  <a
+            href="../../developer/developer.html">Developer</a></nav>
     <div class="full_container"> <img class="bg-image"
             src="../../tpi/images/301777316_379201554417488_7513436252949869093_n.jpg" alt="Snow" style="width:100%;">
         <div class="centered">
