--- a/public/mechanical/pages/mechanical.html
+++ b/public/mechanical/pages/mechanical.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CST Department</title>
+    <title>Mechanical Engineering Department</title>
     <link rel="stylesheet" href="../../cst/css/cst_style.css">
     <link rel="stylesheet" href="../../tpi/css/nav.css">
+
 </head>
 
 <body>
@@ -18,65 +19,171 @@
             href="../../constraction/pages/constraction.html">Construction</a> <a
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+            <a
+            href="../../developer/developer.html">Developer</a>
     </nav>
-    <div class="full_container"> <img class="bg-image" src="../img/s1.jpg" alt="Snow" style="width:100%;">
+    <div class="full_container"> <img class="bg-image" src="../img/5.jpg" alt="Snow" style="width:100%;">
         <div class="centered">
             <h1 class=".bg-text" style="text-shadow: 4px 4px 6px #000000;;"> Welcome to Mechanical Technology </h1>
+            <div><button onclick="scrollToElement('about')">About</button>
+                 <button onclick="scrollToElement('department_phase')">Department Phase</button>
+                 <button onclick="scrollToElement('facilities')">Department's Facilities</button>
+                <button onclick="scrollToElement('images')">Deperment's Images</button>
+                <button onclick="scrollToElement('teachers')">Teachers</button>
+            </div>
         </div>
+
     </div>
+    <header style="text-align: center;">
+        <h1>Tangail Polytechnic Institute</h1>
+        <h2>Mechanical Engineering Department</h2>
+    </header>
+
     <div class="about-section">
-        <div class="container"> <big><b>About CST:</b></big>
-            <p>Computer science and technology have revolutionized our world, shaping the way we live, work, and
-                communicate. From the ubiquitous smartphones in our hands to the cloud-powered systems that run our
-                businesses, computers have become an indispensable part of our daily lives. </p>
-            <p> Computer science is the study of computers and computational systems, encompassing the design,
-                development, and analysis of software and hardware. It encompasses a wide range of disciplines,
-                including algorithms, data structures, artificial intelligence, and computer graphics. </p>
-            <p> Technology, on the other hand, refers to the practical application of scientific knowledge to create
-                tangible tools, devices, and systems. It encompasses a vast array of fields, from telecommunications and
-                electronics to medicine and biotechnology. </p>
-            <p>The interplay between computer science and technology has fueled innovation and transformed industries
-                across the globe. The advent of personal computers, the rise of the Internet, and the development of
-                mobile devices have all been driven by advancements in computer science and technology. </p>
-            <p>These advancements have had a profound impact on society, enabling global communication, providing access
-                to information, and driving economic growth. They have also transformed industries, from healthcare and
-                education to finance and manufacturing.</p>
-            <p>As computer science and technology continue to evolve, we can expect to see even more transformative
-                advancements in the years to come. These advancements will shape the future of our world, impacting our
-                lives in ways we can only begin to imagine. </p> <!-- Other paragraphs go here -->
+        <div class="container" id="about"> <big><b>About CST:</b></big>
+            <p>Tangail Polytechnic Institute, located in Tangail, Bangladesh, offers a comprehensive Mechanical
+                Engineering Diploma program designed to provide students with a specialized education in the principles
+                and applications of mechanical engineering. This post-secondary program is structured to equip students
+                with essential knowledge and skills necessary for a successful career in the field.
+            </p>
+            <p>The curriculum of the Mechanical Engineering Diploma program at Tangail Polytechnic Institute covers a
+                wide range of subjects integral to mechanical engineering. Students delve into areas such as
+                thermodynamics, where they study the principles of energy transfer and conversion. Fluid mechanics is
+                another crucial component, focusing on the behavior of fluids and their applications in various
+                mechanical systems. Materials science is explored to understand the properties and behavior of materials
+                used in engineering applications. Additionally, mechanical design is a key focus, where students learn
+                the principles and techniques of designing mechanical components and systems.
+            </p>
+            <p>One distinctive feature of the program at Tangail Polytechnic Institute is the emphasis on practical
+                learning. The curriculum incorporates hands-on laboratory work and practical projects, providing
+                students with real-world experience to reinforce theoretical concepts. This practical approach ensures
+                that graduates are not only well-versed in the theoretical aspects of mechanical engineering but also
+                possess the practical skills needed in the workplace.
+            </p>
+            <p>Upon successful completion of the three-year program, graduates have various career paths to explore.
+                They can enter the workforce directly, taking on roles such as mechanical technicians, draftsmen, or
+                assistant engineers. These professionals play vital roles in industries such as manufacturing,
+                automotive, and aerospace, contributing to the design, development, and maintenance of mechanical
+                systems and components.
+            </p>
+            <p>Furthermore, the Mechanical Engineering Diploma serves as a stepping stone for those who wish to continue
+                their education. Graduates may choose to pursue a bachelor's degree in mechanical engineering to deepen
+                their understanding of the field and enhance their career prospects. This option reflects the program's
+                commitment to providing a solid foundation for individuals aspiring to excel in the diverse and dynamic
+                field of mechanical engineering.
+            </p>
+            <p>In summary, the Mechanical Engineering Diploma program at Tangail Polytechnic Institute offers a
+                comprehensive and well-rounded education, blending theoretical knowledge with practical skills. This
+                approach prepares students for successful careers in mechanical engineering or provides a solid
+                foundation for further academic pursuits in the field. The institute's commitment to excellence in
+                education contributes to the development of skilled professionals who can thrive in the ever-evolving
+                field of mechanical engineering.
+            </p>
         </div>
     </div>
     <div class="department-section">
-        <div class="container"> <big><b>Department Phase:</b></big>
-            <p>There are 2 shifts . One is Morning shift another is Day shift. Each shift contains 1<sup>st</sup> to
-                8<sup>th</sup> semesters. But 8<sup>th</sup> semester is not academic , it's industrial training. But
-                the semester system is like pair system. When even semster is running all the department covers with
-                even and when even pass, then it's opposite. In every semesters there have like hundres of
-                students.Which are divided by 2 groups for better management</p> <!-- Other paragraphs go here -->
+        <div class="container" id="department_phase"> <big><b>Department Phase:</b></big>
+            <ol>
+                <li>Foundation Phase:
+                    <p>In the initial phase of the program, students build a strong foundation in fundamental
+                        engineering
+                        principles. Courses include mathematics, physics, and basic engineering sciences. This phase
+                        sets
+                        the groundwork for more specialized subjects in later stages.</p>
+                </li>
+                <li>Core Mechanical Engineering Courses:
+                    <p>As students progress, they enter the core phase of the program. Here, they delve into subjects
+                        such
+                        as thermodynamics, fluid mechanics, materials science, and mechanical design. These courses form
+                        the
+                        backbone of their mechanical engineering knowledge, laying the groundwork for the practical
+                        application of these principles.</p>
+                </li>
+                <li>Laboratory and Practical Training:
+                    <p>Throughout the program, students engage in hands-on laboratory work and practical projects. This
+                        phase is crucial for reinforcing theoretical concepts learned in the classroom. The institute is
+                        equipped with state-of-the-art laboratories where students can experiment with real-world
+                        applications, enhancing their understanding of the intricacies of mechanical engineering.</p>
+                </li>
+                <li>Internship and Industry Exposure:
+                    <p>To bridge the gap between academia and industry, the department often includes an internship or
+                        industrial training phase. During this period, students have the opportunity to work in
+                        real-world
+                        engineering settings, gaining practical experience and exposure to the challenges and dynamics
+                        of
+                        the industry.</p>
+                </li>
+                <li>Capstone Project:
+                    <p>The final phase typically involves a capstone project where students apply their accumulated
+                        knowledge and skills to solve a real-world engineering problem. This project serves as a
+                        culmination
+                        of their learning journey, showcasing their ability to integrate theoretical and practical
+                        aspects
+                        of mechanical engineering.</p>
+                </li>
+            </ol>
         </div>
     </div>
     <div class="facilities-section">
-        <div class="container"> <big><b>Department's Facilities:</b></big>
-            <p>One of the finest department in our Institute is Computer Science and Technology. All necessary
-                instruments like Computer,Projector,Monitor, others peripherals for students are available here. All lab
-                class are eco friendly and suited for students in a good way. There have sufficient computers for
-                students to practice . Teachers are also so welcoming to students . They guide students very sinciarly .
-                There have good connection of internet for serve students . Lab teachers are also helpful and they are
-                active all the time to keeps the lab to a better condition. Security Systems are also good , all lab
-                class , theory class , even corridor are bind with CCTV camera. In total <b>CST</b> department in
-                Tangail Polytechnic is one of the best department the institute offers.</p>
+        <div class="container" id="facilities"> <big><b>Department's Facilities:</b></big>
+            <ul>
+                <li>Modern Classrooms:
+                    <p>Tangail Polytechnic Institute provides well-equipped classrooms with modern teaching aids,
+                        creating
+                        an optimal learning environment for students to grasp theoretical concepts effectively.</p>
+                </li>
+                <li>Specialized Laboratories:
+                    <p>The institute boasts specialized laboratories for various branches of mechanical engineering.
+                        These
+                        include thermodynamics labs, fluid mechanics labs, materials testing labs, and computer-aided
+                        design
+                        (CAD) labs. These facilities allow students to conduct experiments, analyze data, and gain
+                        hands-on
+                        experience with industry-standard tools and equipment.</p>
+                </li>
+                <li>Computer Labs:
+                    <p>Given the increasing importance of computer-aided design and simulation in mechanical
+                        engineering,
+                        the department is equipped with computer labs featuring the latest software for design,
+                        analysis,
+                        and simulation. This ensures that students are well-versed in the use of technology relevant to
+                        their field.</p>
+                </li>
+                <li>Workshops:
+                    <p>Tangail Polytechnic Institute provides well-maintained workshops with machinery and tools
+                        essential
+                        for practical training. These workshops allow students to gain proficiency in manufacturing
+                        processes, machine operation, and fabrication techniques.</p>
+                </li>
+                <li>Library Resources:
+                    <p>The institute's library is stocked with an extensive collection of books, journals, and reference
+                        materials related to mechanical engineering. This resource ensures that students have access to
+                        a
+                        wide range of academic materials to support their studies and research.</p>
+                </li>
+                <li>Industry Connections:
+                    <p>The department establishes and maintains strong connections with industries relevant to
+                        mechanical
+                        engineering. These connections facilitate guest lectures, industry visits, and collaborative
+                        projects, providing students with insights into real-world applications and potential career
+                        paths.
+                    </p>
+                </li>
+            </ul>
             <!-- Other paragraphs go here -->
         </div>
     </div>
     <hr> <br>
-    <div style="text-align: center;">
+    <div style="text-align: center;" id="images">
         <h1> Deperment's Images </h1>
     </div>
-    <div id="cst_img" style="text-align: center;"> <img src="../img/Computer Lab.jpg" alt="Computer Lab"> <img
-            src="../img/hw.jpg" alt="Computer Lab"> <img src="../img/s1.jpg" alt="Computer Lab"> <img
-            src="../img/s2.jpg" alt="Computer Lab"> <img src="../img/s3.jpg" alt="Computer Lab"> </div>
+    <div id="cst_img" style="text-align: center;"> <img src="../img/1.jpg" alt="Computer Lab"> <img src="../img/2.jpg"
+            alt="Mechanical Deperment"> <img src="../img/3.jpg" alt="Mechanical Deperment"> <img src="../img/4.jpg"
+            alt="Mechanical Deperment"> <img src="../img/5.jpg" alt="Mechanical Deperment">
+        <img src="../img/6.jpg" alt="Mechanical Deperment">
+    </div>
     <hr>
-    <div style="text-align: center;">
+    <div style="text-align: center;" id="teachers">
         <h1>Teacher's of this Technology</h1>
     </div>
     <div id="main" class="clearfix">
@@ -96,6 +203,18 @@
         </div>
     </div>
     </div>
+    <script>
+        function scrollToElement(id) {
+            console.log(id);
+            console.log("Helo");
+            var element = document.getElementById(id);
+            // or use document.querySelector('.yourClassName') for class name
+            if (element) {
+                console.log("not null")
+                element.scrollIntoView({ behavior: 'smooth' });
+            }
+        }
+    </script>
 </body>
 
 </html>
