--- a/public/tpi/pages/students.html
+++ b/public/tpi/pages/students.html
@@ -18,6 +18,8 @@
             href="../../constraction/pages/constraction.html">Construction</a> <a
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+            <a
+            href="../../developer/developer.html">Developer</a>
     </nav> <br> <iframe frameborder="0" src="https://rg-bd.com/tpi-student-list.php?t=1"
         style="width:100%; height:2000px;"></iframe>
 </body>
