--- a/public/tpi/pages/about.html
+++ b/public/tpi/pages/about.html
@@ -19,6 +19,8 @@
             href="../../constraction/pages/constraction.html">Construction</a> <a
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+            <a
+            href="../../developer/developer.html">Developer</a> 
     </nav> <br>
     <div id="main" class="clearfix">
         <div id="content-wrapper">
