--- a/public/tpi/pages/teachersInfo.html
+++ b/public/tpi/pages/teachersInfo.html
@@ -18,6 +18,8 @@
             href="../../constraction/pages/constraction.html">Construction</a> <a
             href="../../telecom/pages/telecom.html">Telecommunication</a> <a
             href="../../tpi/pages/teachersInfo.html">Teachers</a> <a href="../../tpi/pages/students.html">Students</a>
+            <a
+            href="../../developer/developer.html">Developer</a>
     </nav>
     <div id="main" class="clearfix">
         <div class="tabs"> </div>
