--- a/public/developer/developer.html
+++ b/public/developer/developer.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Your Introduction</title>
+    <title>Developers</title>
+    <link rel = "icon" href =  
+"../tpi/images/Tangail_logo.png" 
+        type = "image/x-icon"> 
   </head>
   <body>
       <div id="intro-container">
