--- a/public/telecom/pages/telecom.html
+++ b/public/telecom/pages/telecom.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CST Department</title>
+    <title>Telecommunication</title>
+    <link rel = "icon" href =  
+    "../../tpi/images/Tangail_logo.png" 
+            type = "image/x-icon"> 
     <link rel="stylesheet" href="../../cst/css/cst_style.css">
     <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
