--- a/public/tpi/pages/students.html
+++ b/public/tpi/pages/students.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>students</title>
+    <title>students</title>    <link rel = "icon" href =  
+    "../../tpi/images/Tangail_logo.png" 
+            type = "image/x-icon"> 
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 
