--- a/public/tpi/pages/teachersInfo.html
+++ b/public/tpi/pages/teachersInfo.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teachers Information</title>
+    <link rel = "icon" href =  
+    "../../tpi/images/Tangail_logo.png" 
+            type = "image/x-icon"> 
     <link rel="stylesheet" href="../css/nav.css">
 </head>
 
